--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0
   font_awesome_flutter: ^9.2.0
   velocity_x: ^3.4.0
+  textfield_search: ^0.9.2
 
 dev_dependencies:
   flutter_test:
