--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,14 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   velocity_x: ^3.4.0
   textfield_search: ^0.9.2
+  hive: ^2.0.6
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
